# librime-qjs

./: CMakeLists.txt  coverage.json  index.html  readme.md  summary.txt
.github/workflows/: build-ci.yml  commit-ci.yml  linux-build.yml  macos-build.yml  release-ci.yml  windows-build.yml
doc/: readme.en.md
src/: module.cc  qjs_component.cc  qjs_component.h
src/dicts/: dictionary.h
src/engines/: for_each_macros.h  js_exception.h  js_macros.h  jscode_utils.cc  jscode_utils.h
src/engines/javascriptcore/: javascriptcore_engine.h  jsc_code_loader.cc  (+1 more)
src/gears/: qjs_filter.cc  qjs_filter.h  qjs_module.cc  qjs_module.h  qjs_processor.cc  qjs_processor.h  qjs_translation.cc  qjs_translation.h  qjs_translator.cc  qjs_translator.h
src/misc/: process_memory.cc  system_info.cc
src/types/: environment.cc  environment.h  js_wrapper.h  qjs_candidate.h  qjs_candidate_iterator.h  qjs_commit_history.h  qjs_commit_record.h  qjs_config.h  qjs_config_item.h  qjs_config_list.h  qjs_config_map.h  qjs_config_value.h  qjs_context.h  qjs_engine.h  qjs_environment.h  qjs_key_event.h  qjs_leveldb.h  qjs_notifier.h  qjs_notifier_connection.h  qjs_os_info.h  qjs_preedit.h  qjs_schema.h  qjs_segment.h  qjs_trie.h
tests/: CMakeLists.txt  component.test.cpp  filter.test.cpp  notifier.test.cpp  processor.test.cpp  rime-qjs-test-main.test.cpp  test_switch.h  translator.test.cpp  types.test.cpp
tests/js/: filter_test.js  translator_test.js  types_test.js
tests/jsc/: load-bundled-plugin.test.cpp
tests/qjs/: expose-cpp-class.test.cpp  import-js-module.test.cpp  report-js-error.test.cpp
tools/: check-api-coverage.js  coverage.sh
(+51 files in other folders)
